revert: "fix(Button): Fix prefix and suffix alignments"
This reverts commit 459580f2d9bb372a852dff2b1b89323ca929c1f2.

Commit breaks button and dropdown layouts

--- a/src/components/Button/Button.st.css
+++ b/src/components/Button/Button.st.css
@@ -18,8 +18,8 @@
     BorderWidth: 1;
     BorderRadius: 0;
     TinyFont: "{theme: 'Body-M', size: '14px', lineHeight: '1.43em'}";
-    SmallFont: "{theme: 'Body-M', size: '16px', lineHeight: '1.5em'}";
-    MediumFont: "{theme: 'Body-M', size: '16px', lineHeight: '1.5em'}";
+    SmallFont: "{theme: 'Body-M', size: '16px', lineHeight: '1.5em'}";	
+    MediumFont: "{theme: 'Body-M', size: '16px', lineHeight: '1.5em'}";	 
     LargeFont: "{theme: 'Body-M', size: '20px', lineHeight: '1.5em'}";
     MobileMediumFont: "{theme: 'Body-M', size: '14px', lineHeight: '1.44em'}";
 }
@@ -244,7 +244,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    display: inline-flex;
+    display: inline-block;
 }
 
 .root:mobile:upgrade{
@@ -336,42 +336,4 @@
 
 .root:priority(primary):upgrade:size(large):mobile, .root:priority(basic):upgrade:size(large):mobile{
     padding: calculate(string(-), 17px, value(secondaryBorderWidth)) 16px;
-}
-
-.root .affixIcon svg path {
-    fill: none;
-}
-
-.root:priority(primary) .affixIcon svg path {
-    stroke: value(PrimaryTextColor);
-}
-
-.root:priority(secondary) .affixIcon svg path {
-    stroke: value(SecondaryTextColor);
-}
-
-.root:priority(basic) .affixIcon svg path {
-    stroke: value(PrimaryTextColor);
-}
-
-.root:priority(basicSecondary) .affixIcon svg path {
-    stroke: value(BasicSecondaryTextColor);
-}
-
-.affixIcon {
-    height: 1.5em;
-    width: 1.5em;
-    display: flex;
-}
-
-.affixIcon svg {
-    width: 100%;
-    height: 100%;
-}
-
-.prefix-icon::after, .suffix-icon::before {
-    content: '';
-    width: 4px;
-    height: 1px;
-    display: inline-block;
 }
